--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
     "mongoose": "^8.20.1",
+    "node-fetch": "^2.7.0",
     "svix": "^1.81.0"
   }
 }
